Layout bugs consertados

--- a/styles.css
+++ b/styles.css
@@ -75,36 +75,37 @@ main h2 {
 .all-quizzes {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 20px;
 }
 
 .quizz {
     position: relative;
-    margin: 0 15px 12px 0;
-    width: 340px;
-    height: 181px;
+    margin-bottom: 30px;
+    width: 30%;
+    aspect-ratio: 1.87845304;
 }
 
 .title {
     position: absolute;
     z-index: 1;
     left: 18px;
-    top: 110px;
-    max-width: 301px;
+    bottom: 0;
+    max-width: 88.529%;
     color: #FFFFFF;
     font-size: 19px;
     line-height: 22px;
 }
 
 .quizz img {
-    width: 340px;
-    height: 181px;
+    width: 100%;
+    height: 100%;
     border-radius: 5px;
-    margin-bottom: 12px;
 }
 
 .background {
-    width: 340px;
-    height: 181px;
+    width: 100%;
+    height: 100%;
     background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 64.58%, #000000 100%);
     position: absolute;
 }
@@ -191,7 +192,7 @@ main h2 {
 }
 
 .answers figure {
-    width: fit-content;
+    width: 48%;
     margin: 0;
 }
 
@@ -202,6 +203,9 @@ main h2 {
 
 .answers figure figcaption {
     font: 700 20px/23.44px roboto;
+
+    max-width: 100%;
+    word-break: break-word;
 }
 
 figure.answered {
@@ -303,20 +307,10 @@ figure.answered.true figcaption {
 .loading-screen img {
     width: 10%;
     aspect-ratio: 1;
-    border-radius: 100%;
-    animation-name: spin;
-    animation-duration: 5000ms;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
 }
 
-@keyframes spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
+.loading-screen.dispĺay-none {
+    display: none;
 }
 
 .quizz-creation {
@@ -463,6 +457,10 @@ ion-icon {
 }
 
 @media (max-width: 1100px) {
+
+    .loading-screen img {
+        width: 20%;
+    }
     .questions {
         width: 100vw;
         padding: 200px 10px 0 10px;
@@ -492,12 +490,15 @@ ion-icon {
     .create-quizz {
         width: 90%;
     }
+
+    .quizz {
+        width: 100%;
+    }
+
     .all-quizzes {
         justify-content: center;
     }
-    .quizz {
-        margin: 0 0 12px 0;
-    }
+
     .answers figure {
         width: 48%;
         height: fit-content;
@@ -532,9 +533,7 @@ ion-icon {
     .all-quizzes {
         justify-content: center;
     }
-    .quizz {
-        margin: 0 0 12px 0;
-    }
+
     .quizz-creation {
         font-size: 20px;
         line-height: 23px;
